--- a/MvcUi/Views/Shared/Error.cshtml
+++ b/MvcUi/Views/Shared/Error.cshtml
@@ -1,14 +1,22 @@
-﻿<!DOCTYPE html>
+﻿
+@model System.Web.Mvc.HandleErrorInfo
+@{
+    ViewBag.Title = "Упс Ошибочка!";
+}
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width" />
-    <title>Ошибка</title>
+    <title>@ViewBag.Title</title>
 </head>
 <body>
     <hgroup>
         <h1>Ошибка.</h1>
         <h2>При обработке запроса произошла ошибка.</h2>
     </hgroup>
+    <article>
+        @Model.Exception.Message
+    </article>
 </body>
 </html>
