работает регистрация по имейлу думаю переделать атнтификацию по Хабр и переопределить свои атрибуты авторизации

--- a/MvcUi/Views/Account/Login.cshtml
+++ b/MvcUi/Views/Account/Login.cshtml
@@ -2,12 +2,17 @@
 @model MvcUi.ViewModels.LoginModel
 @{
     ViewBag.Title = "Выполнить вход";
-    Layout = null;
+
 }
 
-<h2>@ViewBag.Title.</h2>
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-12">
+        <h2>@ViewBag.Title.</h2>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
@@ -34,9 +39,6 @@
                         <input type="submit" value="Выполнить вход" class="btn btn-default" />
                     </div>
                 </div>
-                <p>
-                    @Html.ActionLink("Регистрация нового пользователя", "Register")
-                </p>
                 @* Включите, когда будет включено подтверждение учетной записи для функции сброса пароля
                     <p>
                         @Html.ActionLink("Забыли пароль?", "ForgotPassword")
@@ -44,12 +46,19 @@
             }
         </section>
     </div>
-    @*<div class="col-md-4">
+</div>
+<div class="row">
+    <div class="col-md-push-2 col-md-4">
+        <p>
+            @Html.ActionLink("Регистрация нового пользователя", "Register")
+        </p>
+    </div>
+</div>
+@*<div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
     </div>*@
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
