--- a/MvcUi/Views/Shared/_Layout.cshtml
+++ b/MvcUi/Views/Shared/_Layout.cshtml
@@ -9,12 +9,14 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year</p>
-        </footer>
+    <div class="container">
+        <div class="navbar-header navbar-right">
+            @{Html.RenderPartial("UserName",User);}
+        </div>
+        <div class="body-content">
+            @RenderBody()
+        </div>
+        <hr/>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
