First five items shows on page, Don't know about redirecting anything/ Take care about auth with rca compiling/

--- a/MvcUi/Views/Home/Page1.cshtml
+++ b/MvcUi/Views/Home/Page1.cshtml
@@ -1,11 +1,12 @@
-﻿@model Bll.ViewModels.Page1Model
+﻿
+@model BLL.ViewModels.Account.Page1Model
 @{
     ViewBag.Title = "Home Page";
     Layout = "~/Views/Shared/_EnterLoginLayout.cshtml";
 }
 <div class="row">
     <div class="col-md-12">
-        <h1>  Greating on Page 1</h1>
+        <h1>  Greating on Page 1 </h1>
     </div>
 </div>
 @if (@TempData["messageEmail"] != null)
