--- a/MvcUi/Views/Movie/Page2.cshtml
+++ b/MvcUi/Views/Movie/Page2.cshtml
@@ -5,6 +5,9 @@
 }
 
 <h2>Page2</h2>
+@*ajax form is neded!*@
+
+<h2>5 Movies:</h2>
 <div class="movies5">
     @{Html.RenderAction("List5","Movie");}
 </div>
