--- a/MvcUi/Views/Home/Page1.cshtml
+++ b/MvcUi/Views/Home/Page1.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="row">
     <div class="col-md-12">
-        <h1>  Greating on Page 1 </h1>
+        <h1>  Greating on gfgPage 1 </h1>
     </div>
 </div>
 @if (@TempData["messageEmail"] != null)
