page 4 is added, movie model is changed

--- a/MvcUi/Views/Movie/Index.cshtml
+++ b/MvcUi/Views/Movie/Index.cshtml
@@ -9,7 +9,7 @@
 
 <h2>5 Movies:</h2>
 <div class="movies5">
-    @{Html.RenderPartial("List5",Model);}
+@{Html.RenderPartial("List5",Model);}
 </div>
 
 @using (Html.BeginForm())
@@ -19,3 +19,14 @@
         <button type="submit">Отобразить</button>
     </div>
 }
+
+@using (Html.BeginForm("Create", "Movie", FormMethod.Get))
+{
+    <p>Input name of movie: </p>
+    @Html.TextBox("Name", "Input name")
+    <p>Input release year:</p>
+    @Html.TextBox("ReleaseYear", "Input year")
+    <p><input type="submit" value="Save" /></p>
+}
+
+
