--- a/MvcUi/Views/Movie/Index.cshtml
+++ b/MvcUi/Views/Movie/Index.cshtml
@@ -20,6 +20,7 @@
     </div>
 }
 
+@* в какой вьюхе это должно лежать? *@
 @using (Html.BeginForm("Create", "Movie", FormMethod.Get))
 {
     <p>Input name of movie: </p>
